--- a/publications.html
+++ b/publications.html
@@ -76,16 +76,14 @@
             <img src="data/thumb/2023_MIA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-            <h5 class="mb-1">Supervised tractogram filtering using geometric deep learning</h5>
+            <h5 class="mb-1">Supervised tractogram filtering using Geometric Deep Learning</h5>
           </div>
           <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, Emanuele Olivetti, Silvio Sarubbo, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
           <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
 
-          <a class="badge text-bg-primary" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
+          <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2212.03300"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a> -->
-          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
 
         <!-- CVPR-W 2023 -->
@@ -107,7 +105,7 @@
             <img src="data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-            <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces using geometric deep learning</h5>
+            <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces using Geometric Deep Learning</h5>
           </div>
           <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà, <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
           <p class="mb-1"><i>Nature Methods</i>, 2020
@@ -145,7 +143,7 @@
             <img src="data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-            <h5 class="mb-1">3D shape segmentation with geometric deep learning</h5>
+            <h5 class="mb-1">3D shape segmentation with Geometric Deep Learning</h5>
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2019
