Updated FCGF6D paper info

--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <!-- <a class="btn btn-primary" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;code</a> -->
+          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;code</a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
 
