--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,26 @@
     <div class="container my-5">
       <ul class="list-group list-group-flush">
 
+        <h2>Papers</h2>
+
+        <!-- BMVC 2023 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2023_BMVC_DACA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Detect, Augment, Compose, and Adapt: Four steps for unsupervised domain adaptation in object detection</h5>
+          </div>
+          <p class="mb-1">Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+          <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
+
+          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/"><i class="fa fa-github"></i>&nbsp;code</a> -->
+          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+        </li>
+
         <!-- ICCV-W 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
@@ -64,7 +84,7 @@
           <p class="mb-1"></p><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
           Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></p>
 
-          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
+          <a class="btn btn-primary btn-sm" href="https://authors.elsevier.com/a/1hWhnxnVKBF5J"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
@@ -88,15 +108,15 @@
 
         <!-- CVPR-W 2023 -->
         <li class="list-group-item list-group-item-action">
-          <!-- <figure class="figure">
-            <img src="data/thumb/2023_CVPRW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
-          </figure> -->
+          <figure class="figure">
+            <img src="data/thumb/2023_CVPRW_MONET.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">The MONET dataset: Multimodal drone thermal dataset recorded in rural scenarios</h5>
           </div>
           <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, A. Moura, J. Antunes, A. Dias, H. Silva, A. Leonidou, C. Constantinides, C. Keleshis, D. Abate, Fabio Poiesi</p>
           <p class="mb-1"><i>CVPR-W</i>, 2023</p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR:</font></p> -->
         </li>
 
         <!-- Nature Methods 2020 -->
