Updated GeDi details

--- a/publications.html
+++ b/publications.html
@@ -119,6 +119,19 @@
           <!-- <p class="mb-1"></p><font color="#899499">TLDR:</font></p> -->
         </li>
 
+        <!-- PAMI 2022 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2022_PAMI_GeDi.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Learning general and distinctive 3D local deep descriptors for point cloud registration</h5>
+          </div>
+          <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
+          <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2022</p>
+          <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
+        </li>
+
         <!-- Nature Methods 2020 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
