--- a/publications.html
+++ b/publications.html
@@ -48,8 +48,8 @@
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
 
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
-          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
-          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/"><i class="fa fa-github"></i>&nbsp;code</a> -->
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;code</a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
 
