Updated DACA details

--- a/publications.html
+++ b/publications.html
@@ -47,8 +47,8 @@
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
 
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
 
         <!-- ICCV-W 2023 -->
@@ -63,8 +63,8 @@
           <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023</p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
 
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
 
         <!-- IMAVIS 2023 -->
@@ -80,9 +80,9 @@
           <p class="mb-1"></p><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
           Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></p>
 
-          <a class="btn btn-primary btn-sm" href="https://authors.elsevier.com/a/1hWhnxnVKBF5J"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://authors.elsevier.com/a/1hWhnxnVKBF5J"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
 
