Updated workshop papers details

--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,8 @@
             <h5 class="mb-1">Revisiting Fully Convolutional Geometric Features for object 6D pose estimation</h5>
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
-          <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023</p>
+          <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023
+            &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font></p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
@@ -110,8 +111,9 @@
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">The MONET dataset: Multimodal drone thermal dataset recorded in rural scenarios</h5>
           </div>
-          <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, A. Moura, J. Antunes, A. Dias, H. Silva, A. Leonidou, C. Constantinides, C. Keleshis, D. Abate, Fabio Poiesi</p>
-          <p class="mb-1"><i>CVPR-W</i>, 2023</p>
+          <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, André Moura, José Antunes, André Dias, Hugo Silva, Andreas Leonidou, Christos Constantinides, Christos Keleshis, Dante Abate, Fabio Poiesi</p>
+            <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2023
+              &mdash; <font color="#a21a2a">Held in conjunction with CVPR 2023</font></p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR:</font></p> -->
         </li>
 
