--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
         <!-- BMVC 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2023_BMVC_DACA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2023_BMVC_DACA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Detect, Augment, Compose, and Adapt: Four steps for unsupervised domain adaptation in object detection</h5>
@@ -54,7 +54,7 @@
         <!-- ICCV-W 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2023_ICCVW_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2023_ICCVW_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Revisiting Fully Convolutional Geometric Features for object 6D pose estimation</h5>
@@ -79,9 +79,9 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
           <p class="mb-1"></p><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
-          Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></p>
+          Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
 
-          <a class="btn btn-primary btn-sm" href="https://authors.elsevier.com/a/1hWhnxnVKBF5J"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
@@ -115,20 +115,84 @@
             <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2023
               &mdash; <font color="#a21a2a">Held in conjunction with CVPR 2023</font></p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR:</font></p> -->
+
+          <!-- <a class="btn btn-primary btn-sm" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2304.05417"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/monet_dataset"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
 
-        <!-- PAMI 2022 -->
+        <!-- PAMI 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2022_PAMI_GeDi.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+            <img src="data/thumb/2023_PAMI_GeDi.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning general and distinctive 3D local deep descriptors for point cloud registration</h5>
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
-          <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2022</p>
+          <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2023</p>
           <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
+
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
+
+        <!-- ICPR 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ICPR_Puzzle.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Joint supervised and self-supervised learning for 3D real-world challenges</h5>
+          </div>
+          <p class="mb-1">Antonio Alliegro, <strong>Davide Boscaini</strong>, Tatiana Tommasi</p>
+          <p class="mb-1"><i>International Conference on Pattern Recognition (ICPR)</i>, 2020
+            &mdash; <font color="#a21a2a">Oral presentation (4.4% acceptance rate)</font></p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+
+          <!-- <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!-- ICPR 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ICPR_DIP.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Distinctive 3D local deep descriptors</h5>
+          </div>
+          <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
+          <p class="mb-1"><i>International Conference on Pattern Recognition (ICPR)</i>, 2020</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+
+          <!-- <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!-- ICPR-W 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ICPRW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Localisation of defects in volumetric CT scans of valuable wood logs</h5>
+          </div>
+          <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi, Stefano Messelodi, Ayman Younes, Donato Grande</p>
+          <p class="mb-1"><i>International Workshop on Industrial Machine Learning (IML)</i>, 2020
+            &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+
+          <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!--
+          DA COMPLETARE
+        -->
 
         <!-- Nature Methods 2020 -->
         <li class="list-group-item list-group-item-action">
