--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container my-5">
       <h1>Hi,</h1>
       <div class="col-lg-8 px-0">
-        <p class="fs-5">welcome to my page!</p>
+        <p class="fs-5">Welcome to my page!</p>
         <p class="fs-5">I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) lab
             of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> (FBK) in Trento, Italy.<br>
             Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>
