--- a/publications.html
+++ b/publications.html
@@ -137,6 +137,24 @@
           <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
 
+        <!-- ICPR-W 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ICPRW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Localisation of defects in volumetric CT scans of valuable wood logs</h5>
+          </div>
+          <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi, Stefano Messelodi, Ayman Younes, Donato A. Grande</p>
+          <p class="mb-1"><i>International Workshop on Industrial Machine Learning (IML)</i>, 2020
+            &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+
+          <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
         <!-- ICPR 2020 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
@@ -172,32 +190,82 @@
           <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
         </li>
 
-        <!-- ICPR-W 2020 -->
+        <!-- ICPR 2020 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2020_ICPRW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+            <img src="data/thumb/2020_ICPR_2DKeyEst.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-            <h5 class="mb-1">Localisation of defects in volumetric CT scans of valuable wood logs</h5>
+            <h5 class="mb-1">Shape consistent 2D keypoint estimation under domain shift</h5>
           </div>
-          <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi, Stefano Messelodi, Ayman Younes, Donato Grande</p>
-          <p class="mb-1"><i>International Workshop on Industrial Machine Learning (IML)</i>, 2020
-            &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+          <p class="mb-1">Levi O. Vasconcelos, Massimiliano Mancini, <strong>Davide Boscaini</strong>, Samuel Rota Bulò, Barbara Caputo, Elisa Ricci</p>
+          <p class="mb-1"><i>International Conference on Pattern Recognition (ICPR)</i>, 2020</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: </font></p> -->
 
-          <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
-          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <a class="btn btn-primary btn-sm" href="https://ieeexplore.ieee.org/document/9411982"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2008.01589"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!-- ACCV 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ACCV_NovelView.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Novel-view human action synthesis</h5>
+          </div>
+          <p class="mb-1">Mohamed I. Lakhal, <strong>Davide Boscaini</strong>, Fabio Poiesi, Oswald Lanz, Andrea Cavallaro</p>
+          <p class="mb-1"><i>Asian Conference on Computer Vision (ACCV)</i>, 2020</p>
+          <!-- &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p> -->
+
+          <!-- <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2007.02808"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!-- IJCB 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_IJCB.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Clustered dynamic graph CNN for biometric 3D hand shape recognition</h5>
+          </div>
+          <p class="mb-1">Jan Svoboda, Pietro Astolfi, <strong>Davide Boscaini</strong>, Jonathan Masci, Michael M. Bronstein</p>
+          <p class="mb-1"><i>International Joint Conference on Biometrics (IJCB)</i>, 2020</p>
+          <!-- &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p> -->
+
+          <a class="btn btn-primary btn-sm" href="https://ieeexplore.ieee.org/document/9304894"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
+
+        <!-- MICCAI 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_MICCAI.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Tractogram filtering of anatomically non-plausible fibers with Geometric Deep Learning</h5>
+          </div>
+          <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, E. Olivetti, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
+          <p class="mb-1"><i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</i>, 2020
+            &mdash; <font color="#a21a2a">First Geometric Deep Learning application to NeuroImaging tasks</font></p>
+
+          <!-- <a class="btn btn-primary btn-sm" href="https://ieeexplore.ieee.org/document/9304894"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2003.11013"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
         </li>
 
         <!--
-          DA COMPLETARE
+          Self-supervision for 3D real-world challenges ECCV-W 2020
         -->
 
         <!-- Nature Methods 2020 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces using Geometric Deep Learning</h5>
@@ -210,19 +278,20 @@
         <!-- NeurIPS-W 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_neurips_workshop.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2019_neurips_workshop.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning interaction patterns from surface representations of protein structure</h5>
           </div>
           <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà, <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
-          <p class="mb-1"><i>NeurIPS Workshop on Graph Representation Learning</i>, 2019</p>
+          <p class="mb-1"><i>NeurIPS Workshop on Graph Representation Learning</i>, 2019
+            &mdash; <font color="#a21a2a">Held in conjunction with NeurIPS 2019</font></p>
         </li>
 
         <!-- 3DV 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_sda.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2019_sda.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Structured domain adaptation for 3D keypoint estimation</h5>
@@ -235,7 +304,7 @@
         <!-- ICIAP 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">3D shape segmentation with Geometric Deep Learning</h5>
@@ -250,7 +319,7 @@
         <!-- CVPR 2017 -->
         <li class="list-group-item list-group-item-action"> <!--flex-column align-items-start-->
           <figure class="figure">
-            <img src="data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Geometric deep learning on graphs and manifolds using mixture model CNNs</h5>
@@ -268,7 +337,7 @@
         <!-- NeurIPS 2016 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning shape correspondence with anisotropic convolutional neural networks</h5>
@@ -285,7 +354,7 @@
         <!-- EG 2016 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Anisotropic diffusion descriptors</h5>
@@ -301,7 +370,7 @@
         <!-- SGP 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks</h5>
@@ -314,7 +383,7 @@
         <!-- ICCV-W 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Geodesic convolutional neural networks on Riemannian manifolds</h5>
@@ -328,7 +397,7 @@
         <!-- EG 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Shape-From-Operator: Recovering shapes from intrisic operators</h5>
@@ -341,7 +410,7 @@
         <!-- 3DOR 2014 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Coulomb shapes: Using electrostatic forces for deformation-invariant shape representation</h5>
@@ -354,7 +423,7 @@
         <!-- TVC 2014 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">A sparse coding approach for local-to-global 3D shape description</h5>
@@ -366,7 +435,7 @@
         <!-- 3DOR 2013 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Local signature quantization by sparse coding</h5>
