Updated old papers

--- a/publications.html
+++ b/publications.html
@@ -258,9 +258,22 @@
           <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
         </li>
 
-        <!--
-          Self-supervision for 3D real-world challenges ECCV-W 2020
-        -->
+        <!-- ECCV-W 2020 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2020_ECCVW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Self-supervision for 3D real-world challenges</h5>
+          </div>
+          <p class="mb-1">Antonio Alliegro, <strong>Davide Boscaini</strong>, Tatiana Tommasi</p>
+          <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2020
+            &mdash; <font color="#a21a2a">Held in conjunction with ECCV 2020</font></p>
+
+          <a class="btn btn-primary btn-sm" href="https://link.springer.com/chapter/10.1007/978-3-030-66415-2_48"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a> -->
+        </li>
 
         <!-- Nature Methods 2020 -->
         <li class="list-group-item list-group-item-action">
