--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,23 @@
 
         <h2>Papers</h2>
 
+        <!-- CVPR 2024 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2024_CVPR_Oryon.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Open-vocabulary object 6D pose estimation</h5>
+          </div>
+          <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
+          <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
+
+          <a class="btn btn-primary btn-sm" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+        </li>
+
         <!-- BMVC 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
