--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024</p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
+          <p class="mb-1"></p><font color="#899499">TLDR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest.</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
