--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,8 @@
             <h5 class="mb-1">Open-vocabulary object 6D pose estimation</h5>
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
-          <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024</p>
+          <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
+            &mdash; <font color="#a21a2a">Highlight poster (11.9% acceptance rate)</font></p>
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest instead of its 3D model or a video capturing it.</font></p>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
