--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
             &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest
-            instead of its 3D model or video footage captured from multiple viewpoints around the object</font></p>
+            instead of requiring as input its 3D model or a video footage capturing multiple viewpoints around the object</font></p>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
