--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
       <h1>Hi,</h1>
       <div class="col-lg-8 px-0">
         <p class="fs-5">Welcome to my page!</p>
-        <p class="fs-5">I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) lab
-            of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> (FBK) in Trento, Italy.<br>
-            Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>
-        <!-- My name is Davide Boscaini, and -->
-        <!-- <p class="fs-5">According to <a href="https://scholar.google.com/citations?user=dT1N2IUAAAAJ&hl=en&oi=ao">Google Scholar</a>, I have an h-index of 13, an i10-index of 14, and my papers have been cited around 4300 times.</p> -->
-        <p class="fs-5">Before joining FBK in 2017, I received my PhD in Computational Science
-            under the supervision of prof. <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
-            at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> (USI) in Lugano, Switzerland.
-            Prior to that, I received a Master's degree in Mathematics in 2013 and a Bachelor's degree in Applied Mathematics in 2010,
-            both from the <a href="https://www.univr.it/en">University of Verona</a>, Italy.</p>
+        <p class="fs-5">I am a tenure-track research scientist at the <a href="https://tev.fbk.eu">Technologies of Vision Lab</a>
+          of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> in Trento, Italy.
+          My research interests are in 3D perception and understanding, with a specific focus on object 6D pose estimation and 3D object understanding.
+          I have been a pioneer in <a href="https://geometricdeeplearning.com">geometric deep learning</a>.</p>
+        <p class="fs-5">Before joining FBK in 2017, I received a PhD in Computational Science
+          under the supervision of prof. <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
+          at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland.
+          Prior to that, I obtained a Master's degree in Mathematics from the <a href="https://www.univr.it/en">University of Verona</a>, Italy, in 2013,
+          and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
+        <p class="fs-5">In my free time, I like <a href="https://www.goodreads.com/user/show/140273804-davide-boscaini">reading</a> and <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
+        <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf">cv</a>.</p>
+
+        <!--Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>-->
 
         <hr class="col-1 my-4">
 
         <h3>Contacts</h3>
         <address>
             <a href="https://www.fbk.eu/en"><strong>Bruno Kessler Foundation</strong></a><br>
-            <a href="https://tev.fbk.eu/en">Technologies of Vision</a><br>
+            <a href="https://tev.fbk.eu/en">Technologies of Vision Lab</a><br>
             Via Sommarive 18<br>
             38123 Povo, Trento, Italy<br>
             Phone: (+39) 0461 314525<br> <!-- <abbr title="Phone">P:</abbr> -->
