--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3>Contacts</h3>
         <address>
             <a href="https://www.fbk.eu/en"><strong>Bruno Kessler Foundation</strong></a><br>
-            <a href="https://tev.fbk.eu/en">Technologies of Vision Lab</a><br>
+            <a href="https://tev.fbk.eu/home">Technologies of Vision Lab</a><br>
             Via Sommarive 18<br>
             38123 Povo, Trento, Italy<br>
             Phone: (+39) 0461 314525<br> <!-- <abbr title="Phone">P:</abbr> -->
