Added dropdown references

--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,7 @@
             &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest instead of requiring its 3D model or video footage capturing multiple viewpoints around the object.</font></p>
+
           <a class="btn btn-primary btn-sm" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/oryon"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -128,6 +129,21 @@
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+
+          <a class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;<strong>reference</strong>
+          </a>
+          <div class="dropdown-menu p-4 text-body-secondary">
+            <pre style="margin-top:-5px; margin-bottom:-10px"><code>
+              @inproceedings{mekhalfi2023daca,
+                title = {Detect, Augment, Compose, and Adapt: Four steps for unsupervised domain adaptation in object detection},
+                author = {Mekhalfi, Mohamed Lamine and Boscaini, Davide and Poiesi, Fabio},
+                journal = {British Machine Vision Conference (BMVC)},
+                year = {2023}
+              }
+            </code></pre>
+          </div>
+
           <p></p>
         </li>
 
