Added dropdown references

--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@
               @inproceedings{corsetti2024oryon,
                 title = {Open-vocabulary object 6D pose estimation},
                 author = {Corsetti, Jaime and Boscaini, Davide and Oh, Changjae and Cavallaro, Andrea and Poiesi, Fabio},
-                journal = {IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR)},
+                journal = {Computer Vision and Pattern Recognition (CVPR)},
                 year = {2024}
               }
             </code></pre>
