--- a/publications.html
+++ b/publications.html
@@ -51,20 +51,21 @@
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
             &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation,
-            in which a textual prompt is used to specify the object of interest instead of requiring its 3D model or video footage capturing multiple viewpoints around the object.</font></p>
+            in which a textual prompt is used to specify the object of interest,
+            instead of requiring its 3D model or a video footage capturing multiple viewpoints around the object.</font></p>
 
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/">
-            <i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong>
+            <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00690">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/oryon">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
+            <i class="fa fa-github"></i>&nbsp;&nbsp;code
           </a>
-          <a class="btn btn-outline-dark btn-sm" href="data/ref/corsetti2024oryon.bib">
+          <!-- <a class="btn btn-outline-dark btn-sm" href="data/ref/corsetti2024oryon.bib">
             <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;<strong>reference</strong>
-          </a>
+          </a> -->
 
           <!-- 
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -170,26 +171,11 @@
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
 
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2308.15353">
-            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
           </a>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/mohamedtev/daca">
-            <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
+            <i class="fa fa-github"></i>&nbsp;&nbsp;code
           </a>
-
-          <!-- <a class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;<strong>reference</strong>
-          </a>
-          <div class="dropdown-menu p-4 text-body-secondary">
-            <pre style="margin-top:-5px; margin-bottom:-10px"><code>
-              @inproceedings{mekhalfi2023daca,
-                title = {Detect, Augment, Compose, and Adapt: Four steps for unsupervised domain adaptation in object detection},
-                author = {Mekhalfi, Mohamed Lamine and Boscaini, Davide and Poiesi, Fabio},
-                journal = {British Machine Vision Conference (BMVC)},
-                year = {2023}
-              }
-            </code></pre>
-          </div> -->
-
           <p></p>
         </li>
 
@@ -206,8 +192,12 @@
             &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font></p>
           <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
 
-          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15514">
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+          </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/FCGF6D">
+            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+          </a>
           <p></p>
         </li>
 
@@ -224,10 +214,15 @@
           <p class="mb-1"><font color="#899499">TL;DR: We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
             PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
 
-          <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
-          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+          <a class="btn btn-outline-dark btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427">
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" href="https://arxiv.org/abs/2307.15692">
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" href="https://github.com/davideboscaini/PatchMixer">
+            <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
+          </a>
           <p></p>
         </li>
 
@@ -243,8 +238,12 @@
           <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
           <!-- <p class="mb-1"><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
 
-          <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2212.03300"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-outline-dark btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub">
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" href="https://arxiv.org/abs/2212.03300">
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong>
+          </a>
         </li>
 
         <!-- CVPR-W 2023 -->
@@ -488,7 +487,7 @@
 
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1611.08402"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a> -->
         </li>
 
         <!-- NeurIPS 2016 -->
@@ -505,7 +504,7 @@
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/144zT0gGZY9JyfeQR0jusS181tCKDuSrG/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1605.06437"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/acnn"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
+          <!-- <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a> -->
         </li>
 
         <!-- EG 2016 -->
