--- a/publications.html
+++ b/publications.html
@@ -32,9 +32,28 @@
 
     <div class="container my-5">
 
+      <h2>Bibliometrics</h2>
+      <div class="container">
+        <a class="btn btn-outline-dark btn-sm" href="https://scholar.google.com/citations?user=dT1N2IUAAAAJ&amp;hl=en&amp;oi=ao">
+          <i class="ai ai-google-scholar ai-3x" style="vertical-align: middle"></i> Google Scholar
+        </a>
+        <a class="btn btn-outline-dark btn-sm" href="https://www.semanticscholar.org/author/D.-Boscaini/1804261">
+          <i class="ai ai-semantic-scholar ai-3x" style="vertical-align: middle"></i> Semantic Scholar
+        </a>
+        <a class="btn btn-outline-dark btn-sm" href="https://dblp.org/pid/129/6623.html">
+          <i class="ai ai-dblp ai-3x" style="vertical-align: middle"></i> dblp
+        </a>
+        <a class="btn btn-outline-dark btn-sm" href="https://orcid.org/0000-0003-4887-2038">
+          <i class="ai ai-orcid ai-3x" style="vertical-align: middle"></i> orcid
+        </a>
+      </div>
+      <br><br>
+
+
       <h2>Papers</h2>
 
       <!-- 2024 -->
+      <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
         <h3>2024</h3>
 
@@ -66,6 +85,7 @@
       </ul>
 
       <!-- 2023 -->
+      <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
         <h3>2023</h3>
 
@@ -196,6 +216,7 @@
       </ul>
 
       <!-- Until 2022 -->
+      <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
         <h3>Until 2022</h3>
 
